src/objects/Datafeed__c.object
<CustomObject>
    <description>SFDC1-2521 MSFA Custom Object for Contacts - Datafeeds</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Datafeeds</relationshipLabel>
        <relationshipName>Datafeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DatafeedDescription__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Datafeed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DatafeedFilename__c</fullName>
        <description>SFDC1-2521 This is the filename that the client sees at their end</description>
        <label>Datafeed Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DatafeedFrequency__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Datafeed Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Twice Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly (Wed Datasest, Fri Publish)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DatafeedStatus__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Datafeed Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Extinct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Delivery</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FTP</fullName>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                </value>
                <value>
                    <fullName>Sharefile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-6785: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginName__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Login Name</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PGPKey__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>PGP Key</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDDatafeed__c</fullName>
        <description>SFDC1-6785 PKID is used for data migration support from the legacy system</description>
        <displayFormat>Dfe{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>PKID is used for data migration support from the legacy system and is auto-generated</inlineHelpText>
        <label>PKID Datafeed</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7972 This is a lookup to the Product Login table the DataFeed is related to.</description>
        <inlineHelpText>Please select the Product Login table the DataFeed is related to</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Datafeeds</relationshipLabel>
        <relationshipName>Datafeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportConfig__c</fullName>
        <description>SFDC1-2521 Data Feed Related Object for Contacts</description>
        <label>Report Config</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReportStyle__c</fullName>
        <label>Report Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Old</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Datafeed</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Datafeed-{0000}</displayFormat>
        <label>Datafeed ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Datafeeds</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>